
syntax = "proto3";
package SmartPeakServer;

service Workflow {
  rpc runWorkflow (WorkflowParameters) returns (WorkflowStatus) {}
  rpc getLogStream (InquireLogs) returns (stream LogStream) {}
}

message WorkflowParameters {
  enum ExportReport {
    ALL = 0;
    FEATUREDB = 1;
    PIVOTTABLE = 2;
  }
  string sequence_file = 1;
  ExportReport export = 2;
  string report_metadata = 3;
  string report_sample_types = 4;
  string integrity = 5; 
}

message WorkflowStatus {
  int32 progress_in_percent = 1;
  string status_code = 2;
  string session_id = 3;
  string path_to_results = 4;
}

message InquireLogs {
  int32 nr_lines = 1;
}

message LogStream {
  string log_line = 1;
}
